--- a/android_app/lib/l10n/app_en.arb
+++ b/android_app/lib/l10n/app_en.arb
@@ -1,7 +1,4 @@
 {
   "@@locale": "en",
-  "appTitle": "Hello World App",
-  "greeting": "Hello World",
-  "changeLanguage": "Change Language",
-  "darkMode": "Dark Mode"
+  "task_page_title": "Task page"
 }
