--- a/android_app/lib/l10n/app_uk.arb
+++ b/android_app/lib/l10n/app_uk.arb
@@ -1,7 +1,4 @@
 {
   "@@locale": "uk",
-  "appTitle": "Привіт Світ",
-  "greeting": "Привіт Світ",
-  "changeLanguage": "Змінити мову",
-  "darkMode": "Темний режим"
+  "task_page_title": "Сторінка завдань"
 }
